# ScientificComputing_Set1

./: README.md  Team_effort_distribution.docx  paul-test.ipynb  pyproject.toml  requirements.txt
data/: opt_omega_vs_N_data.csv
src/: Analitical_result.py  Experiments_masks.py  SOR_diff.py  finite_difference.py  jacobi_iteration.py  main_SOR.py  main_jacobi.py  main_masks.py  main_time_dep_diff.py  main_vibr_string.py  mask_domain.py  time_dep_diff.py  time_dep_diff_tools.py  vibr_string.py
src/cpp_modules/: GNUmakefile  fast_finite_difference.cpp
src/extras/1d_conv_diff/: conv_diffusion_1d.py  main_conv_diff.py
src/extras/1d_temp_diff_rod/: main_temp_dif_1d.py  temp_diffus_1d.py
test/: test_time_dep_diff.py  test_vibr_string.py
